@@ -14,6 +14,7 @@ export(as.colcyclic)
 export(as.rowblock)
 export(as.rowcyclic)
 export(bldim)
+export(cbind.ddmatrix)
 export(colMax)
 export(colMin)
 export(companion)
@@ -30,6 +31,7 @@ export(ncol)
 export(nrow)
 export(prcomp)
 export(print)
+export(rbind.ddmatrix)
 export(reblock)
 export(redistribute)
 export(rowMax)
@@ -72,7 +74,6 @@ exportMethods(as.vector)
 exportMethods(asin)
 exportMethods(atan)
 exportMethods(bldim)
-exportMethods(cbind)
 exportMethods(ceiling)
 exportMethods(chol)
 exportMethods(chol2inv)
@@ -123,7 +124,6 @@ exportMethods(qr.Q)
 exportMethods(qr.R)
 exportMethods(qr.qty)
 exportMethods(qr.qy)
-exportMethods(rbind)
 exportMethods(rcond)
 exportMethods(round)
 exportMethods(rowMax)
