@@ -1,15 +1,14 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/ddmatrix_bind.r
-\docType{methods}
 \name{binds}
 \alias{binds}
-\alias{cbind,ANY-method}
-\alias{rbind,ANY-method}
+\alias{cbind.ddmatrix}
+\alias{rbind.ddmatrix}
 \title{Row and Column binds for Distributed Matrices}
 \usage{
-\S4method{rbind}{ANY}(..., ICTXT = .pbd_env$ICTXT, deparse.level = 1)
+rbind.ddmatrix(..., ICTXT = .pbd_env$ICTXT, deparse.level = 1)
 
-\S4method{cbind}{ANY}(..., ICTXT = .pbd_env$ICTXT, deparse.level = 1)
+cbind.ddmatrix(..., ICTXT = .pbd_env$ICTXT, deparse.level = 1)
 }
 \arguments{
 \item{...}{vectors, matrices, or distributed matrices.}
